--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="logo" src="./images/logo" alt="Logo">
         <ul>
             <li><a href=#top>About</a></li>
-            <li><a href=#ideas>Ideas</a></li>
+            <li><a href=#ideas>Meal Ideas</a></li>
             <li><a href=#sign-up>Sign Up</a></li>
         </ul>
     </header>
@@ -25,5 +25,32 @@
         <img class="top-photo" src="./images/food-platter">
     </div>
     
+    <div id="ideas">
+        <h2>Meal Ideas</h2>
+        <img src="./images/fried-rice" alt="Fried Rice">
+        <p>Fried rice is a very simple dish and a great way to use up leftover items in the fridge.</p>
+        <img src="./images/oatmeal" alt="Oatmeal">
+        <p>Oatmeal is a classic breakfast item. Make it more filling by adding toppings such as fruits and nuts.</p>
+        <img src="./images/instant-noodles" alt="Instant Noodles">
+        <p>On days when you are really short on time, instant noodles make a perfect dish. Add protein and vegetables to make it
+            a more substantial meal.</p>
+        <img src="./images/wrap">
+        <p>Wraps are quick and easy to make. They're highly customisable using whatever you have in the kitchen.</p>
+    </div>
+
+    <div class="quote">
+        <p>We don't need a silver fork to eat good food.</p>
+        <p>- Paul Prudhomme</p>
+    </div>
+
+    <div id="sign-up">
+        <h3>Looking for more meal ideas?</h3>
+        <p>Sign up to our newsletter and we'll email you five recipes every week!</p>
+        <button>Sign up</button>
+    </div>
+
+    <footer>
+        Copyright &copy The Odin Project 2022
+    </footer>
 </body>
 </html>
