Added divs to index.html for flex positioning

--- a/index.html
+++ b/index.html
@@ -19,23 +19,35 @@
     </header>
 
     <div id="top">
-        <h1>Quick and Easy Meals</h1>
-        <p>These meals are quick, delicious and perfect for those short on time. Sign up to our newsletter for recipes!</p>
-        <button>Sign up</button>
+        <div class="left">
+            <h1>Quick and Easy Meals</h1>
+            <p>These meals are quick, delicious and perfect for those short on time. Sign up to our newsletter for recipes!</p>
+            <button>Sign up</button>
+        </div>
         <img class="top-photo" src="./images/food-platter">
     </div>
     
     <div id="ideas">
         <h2>Meal Ideas</h2>
-        <img src="./images/fried-rice" alt="Fried Rice">
-        <p>Fried rice is a very simple dish and a great way to use up leftover items in the fridge.</p>
-        <img src="./images/oatmeal" alt="Oatmeal">
-        <p>Oatmeal is a classic breakfast item. Make it more filling by adding toppings such as fruits and nuts.</p>
-        <img src="./images/instant-noodles" alt="Instant Noodles">
-        <p>On days when you are really short on time, instant noodles make a perfect dish. Add protein and vegetables to make it
-            a more substantial meal.</p>
-        <img src="./images/wrap">
-        <p>Wraps are quick and easy to make. They're highly customisable using whatever you have in the kitchen.</p>
+        <div class="content">
+            <div class="food">
+                <img src="./images/fried-rice" alt="Fried Rice">
+                <p>Fried rice is a very simple dish and a great way to use up leftover items in the fridge.</p>
+            </div>
+            <div class="food">
+                <img src="./images/oatmeal" alt="Oatmeal">
+                <p>Oatmeal is a classic breakfast item. Make it more filling by adding toppings such as fruits and nuts.</p>
+            </div>
+            <div class="food">
+                <img src="./images/instant-noodles" alt="Instant Noodles">
+                <p>On days when you are really short on time, instant noodles make a perfect dish. Add protein and vegetables to make it
+                    a more substantial meal.</p>
+            </div>
+            <div class="food">
+                <img src="./images/wrap" aria-label="Wrap">
+                <p>Wraps are quick and easy to make. They're highly customisable using whatever you have in the kitchen.</p>
+            </div>
+        </div>
     </div>
 
     <div class="quote">
