Included class .top

--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="./images/logo" alt="Logo">
-        <ul>
-            <li><a href=#top>About</a></li>
-            <li><a href=#ideas>Meal Ideas</a></li>
-            <li><a href=#sign-up>Sign Up</a></li>
-        </ul>
-    </header>
+    <div class="top">
+        <header>
+            <img class="logo" src="./images/logo" alt="Logo">
+            <ul>
+                <li><a href=#about>About</a></li>
+                <li><a href=#ideas>Meal Ideas</a></li>
+                <li><a href=#sign-up>Sign Up</a></li>
+            </ul>
+        </header>
 
-    <div id="top">
-        <div class="left">
-            <h1>Quick and Easy Meals</h1>
-            <p>These meals are quick, delicious and perfect for those short on time. Sign up to our newsletter for recipes!</p>
-            <button>Sign up</button>
+        <div id="about">
+            <div class="left">
+                <h1>Quick and Easy Meals</h1>
+                <p>These meals are quick, delicious and perfect for those short on time. Sign up to our newsletter for recipes!</p>
+                <button>Sign up</button>
+            </div>
+            <img class="top-photo" src="./images/food-platter">
         </div>
-        <img class="top-photo" src="./images/food-platter">
     </div>
     
     <div id="ideas">
