--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </div>
             <div class="food">
                 <img src="./images/instant-noodles" alt="Instant Noodles">
-                <p>On days when you are really short on time, instant noodles make a perfect dish. Add protein and vegetables to make it
-                    a more substantial meal.</p>
+                <p>On really busy days, instant noodles make a perfect dish. Add protein and veggies for a 
+                   more well-rounded meal.</p>
             </div>
             <div class="food">
                 <img src="./images/wrap" aria-label="Wrap">
