Organised body element into content and footer elements

--- a/index.html
+++ b/index.html
@@ -9,59 +9,66 @@
 </head>
 
 <body>
-    <div class="top">
-        <header>
-            <img class="logo" src="./images/logo" alt="Logo">
-            <ul>
-                <li><a href=#about>About</a></li>
-                <li><a href=#ideas>Meal Ideas</a></li>
-                <li><a href=#sign-up>Sign Up</a></li>
-            </ul>
-        </header>
+    <div class="content">
+        <div class="top">
+            <header>
+                <img class="logo" src="./images/logo" alt="Logo">
+                <ul>
+                    <li><a href=#about>About</a></li>
+                    <li><a href=#ideas>Meal Ideas</a></li>
+                    <li><a href=#sign-up>Sign Up</a></li>
+                </ul>
+            </header>
 
-        <div id="about">
-            <div class="left">
-                <h1>Quick and Easy Meals</h1>
-                <p>These meals are quick, delicious and perfect for those short on time. Sign up to our newsletter for recipes!</p>
-                <button>Sign up</button>
-            </div>
-            <img class="top-photo" src="./images/food-platter">
-        </div>
-    </div>
-    
-    <div id="ideas">
-        <h2>Meal Ideas</h2>
-        <div class="content">
-            <div class="food">
-                <img src="./images/fried-rice" alt="Fried Rice">
-                <p>Fried rice is a very simple dish and a great way to use up leftover items in the fridge.</p>
-            </div>
-            <div class="food">
-                <img src="./images/oatmeal" alt="Oatmeal">
-                <p>Oatmeal is a classic breakfast item. Make it more filling by adding toppings such as fruits and nuts.</p>
-            </div>
-            <div class="food">
-                <img src="./images/instant-noodles" alt="Instant Noodles">
-                <p>On really busy days, instant noodles make a perfect dish. Add protein and veggies for a 
-                   more well-rounded meal.</p>
-            </div>
-            <div class="food">
-                <img src="./images/wrap" aria-label="Wrap">
-                <p>Wraps are quick and easy to make. They're highly customisable using whatever you have in the kitchen.</p>
+            <div id="about">
+                <div class="left">
+                    <h1>Quick and Easy Meals</h1>
+                    <p>These meals are quick, delicious and perfect for those short on time. Sign up to our newsletter for recipes!</p>
+                    <button>Sign up</button>
+                </div>
+                <img class="top-photo" src="./images/food-platter">
             </div>
         </div>
+        
+        <div id="ideas">
+            <h2>Meal Ideas</h2>
+            <div class="photos-and-description">
+                <div class="food">
+                    <img src="./images/fried-rice" alt="Fried Rice">
+                    <p>Fried rice is a very simple dish and a great way to use up leftover items in the fridge.</p>
+                </div>
+                <div class="food">
+                    <img src="./images/oatmeal" alt="Oatmeal">
+                    <p>Oatmeal is a classic breakfast item. Make it more filling by adding toppings such as fruits and nuts.</p>
+                </div>
+                <div class="food">
+                    <img src="./images/instant-noodles" alt="Instant Noodles">
+                    <p>On really busy days, instant noodles make a perfect dish. Add protein and veggies for a 
+                    more well-rounded meal.</p>
+                </div>
+                <div class="food">
+                    <img src="./images/wrap" aria-label="Wrap">
+                    <p>Wraps are quick and easy to make. They're highly customisable using whatever you have in the kitchen.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="quote-section">
+            <div class="quote">
+                <p>We don't need a silver fork to eat good food.</p>
+            </div>
+            <div class="name">
+                <p>- Paul Prudhomme</p>
+            </div>
+        </div>
+
+        <div id="sign-up">
+            <h3>Looking for more meal ideas?</h3>
+            <p>Sign up to our newsletter and we'll email you five recipes every week!</p>
+            <button>Sign up</button>
+        </div>
     </div>
 
-    <div class="quote">
-        <p>We don't need a silver fork to eat good food.</p>
-        <p>- Paul Prudhomme</p>
-    </div>
-
-    <div id="sign-up">
-        <h3>Looking for more meal ideas?</h3>
-        <p>Sign up to our newsletter and we'll email you five recipes every week!</p>
-        <button>Sign up</button>
-    </div>
 
     <footer>
         Copyright &copy The Odin Project 2022
