--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
         </div>
 
         <div id="sign-up">
-            <h3>Looking for more meal ideas?</h3>
-            <p>Sign up to our newsletter and we'll email you five recipes every week!</p>
-            <button>Sign up</button>
+            <div class="sign-up-caption">
+                <h3>Looking for more meal ideas?</h3>
+                <p>Sign up to our newsletter and we'll email you five recipes every week!</p>
+            </div>
+            <div class="sign-up-button">
+                <button>Sign up</button>
+            </div>
         </div>
     </div>
 
